--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon script.ts"
+    "devStart": "nodemon script.ts",
+    "devHttpStart": "nodemon http.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
@@ -17,6 +19,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0"
+    "@prisma/client": "^4.9.0",
+    "express": "^4.18.2"
   }
 }
