--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon script.ts",
+    "prisma": "nodemon prisma.ts",
+    "devStart": "nodemon app.ts",
     "devHttpStart": "nodemon http.ts"
   },
   "keywords": [],
@@ -20,6 +21,9 @@
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "~15.3.0"
   }
 }
