--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "~15.3.0"
+    "graphql": "~15.3.0",
+    "jsonwebtoken": "^9.0.0"
   }
 }
