--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prisma": "nodemon prisma.ts",
-    "devStart": "nodemon app.ts",
+    "dev": "nodemon app.ts",
     "devHttpStart": "nodemon http.ts"
   },
   "keywords": [],
